// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-bdnylx sc-gtssRu NBrUb jsKurr"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bdnylx sc-gtssRu jsVdZQ jsKurr"
>
  foo
</button>
`;
